# python_project_base

./: README.md  setup.cfg
src/sample_package/: sample_code.py
tests/: test_sample_code.py
