[metadata]
name = package_name
version = attr: sample_package.__version__
author = Name
author_email = Mail@address
description = Short description of this package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
install_requires =
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  add_one = sample_package.sample_code:add_one_cli
